# beam-dataflow-iceberg-bqms

./: .gitignore  README.md  README_STREAM.md  README_STREAM_AGG.md  beam_iceberg_config.py  beam_iceberg_demo.py  config.py  create_iceberg_tables.py  pubsub_to_bigquery.py  pyproject.toml  requirements.txt  run_dataflow.sh  run_local.sh  setup.py
schemas/: agg_table.json  agg_table.sql  agg_table_view.sql  create_agg_view.py  test_sql_schema.py
utils/: __init__.py  pipeline_options.py  transforms.py
